<resources>
    <string name="app_name">Svenska Sjöar</string>
    <string name="menu_item_name_1">Om Appen</string>
    <string name="about_text">Denna app är för fiskare för att kunna få information om svenska sjöar(om det krävs fiske kort, var de ligger, m.m).</string>
    <string name="menu_item_name_huvudsida">Huvudsida</string>
    <string name="menu_item_name_settings">Inställningar</string>
    <string name="menu_item_name_fiskar">Alla fiskar</string>
    <string name="button_back_name">Tillbaka</string>
    <string name="button_fish_name">Fiskar</string>
    <string name="button_fishing_info_name">Fiske info</string>
    <string name="update">Uppdatera</string>
    <string name="selektion">Skriv här</string>
    <string name="om_appen">Om Appen</string>
    <string name="tom">Tom</string>
    <string name="valj_sjoar">Välj sjöar:</string>
    <string name="alla_sjoar">Alla Sjöar</string>
    <string name="gratis_fiske">Sjöar med gratis fiske</string>
    <string name="fiskekort">Sjöar fiskekort</string>
    <string name="detalj_text">Nothing here yet</string>

</resources>