<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.appproject.MainActivity">
    <item
        android:id="@+id/menu_item_about"
        android:orderInCategory="150"
        android:title="@string/menu_item_name_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_huvudsida"
        android:orderInCategory="100"
        android:title="@string/menu_item_name_huvudsida"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_settings"
        android:orderInCategory="140"
        android:title="@string/menu_item_name_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_fiskar"
        android:orderInCategory="110"
        android:title="@string/menu_item_name_fiskar"
        app:showAsAction="never" />
</menu>